@@ -41,15 +41,6 @@ gkb-new/xmodmap.sun/base.xml.in
 gswitchit/GNOME_GSwitchItApplet.xml
 gswitchit/GNOME_KeyboardApplet.server.in.in
 gswitchit/gswitchit-applet.c
-libgswitchit/gswitchit-plugins-add.c
-libgswitchit/gswitchit-plugins-app.c
-libgswitchit/gswitchit-plugins.glade
-libgswitchit/gnome-kbd-indicator-test.c
-libgswitchit/gswitchit-config.c
-libgswitchit/gswitchit-plugins-add.c
-libgswitchit/gswitchit-plugins-app.c
-libgswitchit/gswitchit-plugins.desktop.in.in
-libgswitchit/gswitchit-plugins.glade
 gswitchit/gswitchit.glade
 gswitchit/gswitchit.schemas.in
 gweather/GNOME_GWeatherApplet.xml
