@@ -1,3 +1,7 @@
+2007-01-06  Danilo Šegan  <danilo@gnome.org>
+
+	* POTFILES.in: Updated.
+
 2006-12-17  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation.
